--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <section class="pastel-fresa">
                     <section class="pastel-secion secion-invertido">
                         <div class="chocolate-texto">
-                            <h3>Pastel de chocolate</h3>
-                            <p>Un pastel de chocolate es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
+                            <h3>Pastel de fresa</h3>
+                            <p>Un pastel de fresa es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
                             <button><a href="">Ver receta</a></button>
                         </div>
                         <img src="img/pasteles-imagenes/pastel-fresa.png" alt="pastel-fresa">
