--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
         <div class="contactanos">
             <h2>Contactanos</h2>
             <div class="redes">
-                <a href="">
+                <a href="https://x.com/pastelesycogye">
                     <img src="img/icon/twitter.png" alt="twitter">
                 </a>
 
-                <a href="">
+                <a href="https://www.instagram.com/barcelonacakes/?hl=es">
                     <img src="img/icon/instagram.png" alt="Instagram">
                 </a>
 
-                <a href="">
+                <a href="https://www.facebook.com/groups/203054877719864/?locale=es_ES">
                     <img src="img/icon/facebook.png" alt="Facebook">
                 </a>
 
-                <a href="">
+                <a href="https://www.tiktok.com/discover/pasteles?lang=es">
                     <img src="img/icon/tiktok.png" alt="TikTok">
                 </a>
             </div>
