--- a/paginas/preguntas/index.html
+++ b/paginas/preguntas/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto pasteles</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Iansui&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <img src="img/imagen-titulo.png" alt="pastel">
+        <img src="/img/imagen-titulo.png" alt="pastel">
         <h1>Sabor Celestial</h1>
-        <img src="img/imagen-titulo.png" alt="pastel">
+        <img src="/img/imagen-titulo.png" alt="pastel">
     </header>
 
     <div class="conteiner">
@@ -20,31 +20,31 @@
             <ul class="lista-navegador">
                 <li class="portada">
                     <a href="index.html">
-                        <img src="img/icon/pastel-de-cumpleanos.png" alt="portada">
+                        <img src="/img/icon/pastel-de-cumpleanos.png" alt="portada">
                         <span>Pasteles</span>
                     </a>
                 </li>
                 <li class="recetas">
                     <a href="paginas/recetas/index.html">
-                        <img src="img/icon/receta.png" alt="recetas">
+                        <img src="/img/icon/receta.png" alt="recetas">
                         <span>Recetas</span>
                     </a>
                 </li>
                 <li class="preguntas">
-                    <a href="paginas/preguntas/index.html">
-                        <img src="img/icon/pregunta.png" alt="preguntas">
+                    <a href="/paginas/recetas/index.html">
+                        <img src="/img/icon/pregunta.png" alt="preguntas">
                         <span>Preguntas</span>
                     </a>
                 </li>
                 <li class="cuestionario">
-                    <a href="">
-                        <img src="img/icon/cuestionario.png" alt="cuestionario">
+                    <a href="index.html">
+                        <img src="/img/icon/cuestionario.png" alt="cuestionario">
                         <span>Cuestionario</span>
                     </a>
                 </li>
                 <li class="informacion">
                     <a href="">
-                        <img src="img/icon/informacion.png" alt="informacion">
+                        <img src="/img/icon/informacion.png" alt="informacion">
                         <span>Infotmacion</span>
                     </a>
                 </li>
