--- a/paginas/preguntas/index.html
+++ b/paginas/preguntas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Preguntas</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Iansui&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -19,19 +19,19 @@
         <nav class="navegador">
             <ul class="lista-navegador">
                 <li class="portada">
-                    <a href="index.html">
+                    <a href="/index.html">
                         <img src="/img/icon/pastel-de-cumpleanos.png" alt="portada">
                         <span>Pasteles</span>
                     </a>
                 </li>
                 <li class="recetas">
-                    <a href="paginas/recetas/index.html">
+                    <a href="/paginas/recetas/index.html">
                         <img src="/img/icon/receta.png" alt="recetas">
                         <span>Recetas</span>
                     </a>
                 </li>
                 <li class="preguntas">
-                    <a href="/paginas/recetas/index.html">
+                    <a href="/paginas/preguntas/index.html">
                         <img src="/img/icon/pregunta.png" alt="preguntas">
                         <span>Preguntas</span>
                     </a>
@@ -53,41 +53,47 @@
 
         <main class="principal">
             <section class="secion">
-                <h2>Pasteles</h2>
-                <section class="pastel-secion">
-                    <div class="texto">
-                        <h3>Pastel de chocolate</h3>
-                        <p>Un pastel de chocolate es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
-                        <button><a href="paginas/recetas/index.html">Ver receta</a></button>
+                <h2>Preguntas</h2>
+                <section>
+                    <div class="pregunta">
+                        <details>
+                            <summary>El chocolate es sano?</summary>
+                            <p>Claramente el chocloate es más sano que la verdura. Ya que te hace más feliz, asi que no te procupes por comer mucho chocolate.</p>
+                        </details>
                     </div>
-                    <img src="img/pasteles-imagenes/pastel-chocolate.png" alt="pastel-chocolate">
                 </section>
-                <section class="pastel-fresa">
-                    <section class="pastel-secion secion-invertido">
-                        <div class="texto">
-                            <h3>Pastel de fresa</h3>
-                            <p>Un pastel de fresa es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
-                            <button><a href="paginas/recetas/index.html">Ver receta</a></button>
-                        </div>
-                        <img src="img/pasteles-imagenes/pastel-fresa.png" alt="pastel-fresa">
-                </section>
-                <section class="pastel-secion">
-                    <div class="texto">
-                        <h3>Pastel de limon</h3>
-                        <p>Un pastel de limon es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
-                        <button><a href="paginas/recetas/index.html">Ver receta</a></button>
+                <section class="lado-derecho">
+                    <div class="pregunta">
+                        <details class="inverso">
+                            <summary>La fresa es sana?</summary>
+                            <p>Claramente la fresa es más sano que la verdura. Ya que te hace más feliz, asi que no te procupes por comer mucho fresa.</p>
+                        </details>
                     </div>
-                    <img src="img/pasteles-imagenes/pastel-limon.png" alt="pastel-chocolate">
                 </section>
-                <section class="pastel-secion secion-invertido">
-                    <div class="texto">
-                        <h3>Pastel de Naranja</h3>
-                        <p>Un pastel de Naranja es una delicia irresistible que combina la suavidad y esponjosidad de un bizcocho con el rico y profundo sabor del cacao. Ideal para ocasiones especiales o simplemente para consentirse, suele estar cubierto de glaseado de chocolate, crema de cacao o incluso decoraciones de frutas y nueces. Cada bocado es un placer que conquista tanto a los amantes del chocolate como a los que buscan un toque dulce en su día. ¡Perfecto para acompañar con un café o un vaso de leche fría!</p>
-                        <button><a href="paginas/recetas/index.html">Ver receta</a></button>
+                <section>
+                    <div class="pregunta">
+                        <details>
+                            <summary>El melocoton es sano?</summary>
+                            <p>Claramente el melocoton es más sano que la verdura. Ya que te hace más feliz, asi que no te procupes por comer mucho melocoton.</p>
+                        </details>
                     </div>
-                    <img src="img/pasteles-imagenes/pastel-naranja.png" alt="pastel-chocolate">
                 </section>
-            </section>
+                <section class="lado-derecho">
+                    <div class="pregunta">
+                        <details class="inverso">
+                            <summary>La sandia es sana?</summary>
+                            <p>Claramente el sandia es más sano que la verdura. Ya que te hace más feliz, asi que no te procupes por comer mucho sandia.</p>
+                        </details>
+                    </div>
+                </section>
+                <section>
+                    <div class="pregunta">
+                        <details>
+                            <summary>La menta es sana?</summary>
+                            <p>Claramente el menta es más sano que la verdura. Ya que te hace más feliz, asi que no te procupes por comer mucho menta.</p>
+                        </details>
+                    </div>
+                </section>
         </main>
     </div>
     
@@ -116,19 +122,19 @@
             <h2>Contactanos</h2>
             <div class="redes">
                 <a href="https://x.com/pastelesycogye">
-                    <img src="img/icon/twitter.png" alt="twitter">
+                    <img src="/img/icon/twitter.png" alt="twitter">
                 </a>
 
                 <a href="https://www.instagram.com/barcelonacakes/?hl=es">
-                    <img src="img/icon/instagram.png" alt="Instagram">
+                    <img src="/img/icon/instagram.png" alt="Instagram">
                 </a>
 
                 <a href="https://www.facebook.com/groups/203054877719864/?locale=es_ES">
-                    <img src="img/icon/facebook.png" alt="Facebook">
+                    <img src="/img/icon/facebook.png" alt="Facebook">
                 </a>
 
                 <a href="https://www.tiktok.com/discover/pasteles?lang=es">
-                    <img src="img/icon/tiktok.png" alt="TikTok">
+                    <img src="/img/icon/tiktok.png" alt="TikTok">
                 </a>
             </div>
         </div>
