--- a/paginas/recetas/index.html
+++ b/paginas/recetas/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="cuestionario">
-                    <a href="">
+                    <a href="/paginas/cuestionarios/index.html">
                         <img src="/img/icon/cuestionario.png" alt="cuestionario">
                         <span>Cuestionario</span>
                     </a>
