--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="informacion">
-                    <a href="">
+                    <a href="paginas/informacion/index.html">
                         <img src="img/icon/informacion.png" alt="informacion">
                         <span>Infotmacion</span>
                     </a>
