--- a/paginas/cuestionarios/index.html
+++ b/paginas/cuestionarios/index.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="informacion">
-                    <a href="">
+                    <a href="/paginas/informacion/index.html">
                         <img src="/img/icon/informacion.png" alt="informacion">
                         <span>Infotmacion</span>
                     </a>
@@ -54,11 +54,85 @@
         <main class="principal">
             <section class="secion">
                 <h2>Cuestionario</h2>
-                <section class="pastel-secion">
-                    <form class="formulario-main" action="index.html">
-
-                    </form>
-                </section>
+                <form class="formulario-main" action="index.html">
+                    <div class="lado-izquierdo">
+                        <div class="formulario_primera-parte">
+                            <label for="texto">Pon tu nombre
+                                <input id="texto" type="text">
+                            </label>
+                            <label for="email"> Pon tu email
+                                <input id="email" type="email">
+                            </label>
+                        </div>
+                        <label for="pasteles">Selecioan tu pastel faborito
+                        </label>
+                        <select name="pasteles" id="pasteles">
+                            <option value="Chocolate">Pastel de chocolate</option>
+                            <option value="fresa">Pastel de fresa</option>
+                            <option value="limon">Pastel de limon</option>
+                        </select>
+                        <div class="raya"></div>
+                        <div>
+                            <p>¿Cual pastel esta mas bueno?</p>
+                            <label for="chocolate">Pastel de chocolate:
+                                <input type="radio" id="chocolate" name="mas-bueno">
+                            </label>
+                            <label for="fresa">Pastel de fresa:
+                                <input type="radio" id="fresa" name="mas-bueno">
+                            </label>
+                            <label for="fresa">Pastel de limon:
+                                <input type="radio" id="limon" name="mas-bueno">
+                            </label>
+                            <label for="todos-buenos">Todos:
+                                <input type="radio" id="todos-buenos" name="mas-bueno">
+                            </label>
+                        </div>
+                        <div class="raya"></div>
+                        <div>
+                            <p>¿Cual te gusta menos?</p>
+                            <label for="chocolate2">Pastel de chocolate:
+                                <input type="radio" id="chocolate2" name="no-gusta">
+                            </label>
+                            <label for="fresa2">Pastel de fresa:
+                                <input type="radio" id="fresa2" name="no-gusta">
+                            </label>
+                            <label for="limon2">Pastel de limon:
+                                <input type="radio" id="limon2" name="no-gusta">
+                            </label>
+                            <label for="ninguno">ninguno:
+                                <input type="radio" id="ninguno" name="no-gusta">
+                            </label>
+                        </div>
+                        <div class="raya"></div>
+                        <div>
+                            <p>Eligue 2:</p>
+                            <label for="chocolate3">Pastel de chocolate:
+                                <input type="checkbox" id="chocolate3" name="elgue2">
+                            </label>
+                            <label for="fresa3">Pastel de fresa:
+                                <input type="checkbox" id="fresa3" name="eligue2">
+                            </label>
+                            <label for="limon3">Pastel de limon:
+                                <input type="checkbox" id="limon3" name="eligue2">
+                            </label>
+                            <label for="naranja">Naranja:
+                                <input type="checkbox" id="naranja" name="eligue2">
+                            </label>
+                        </div>
+                        <div class="raya"></div>
+                        <label for="comentario-mejora" class="comentario-mejora">Explica en que poriamos mejorar:
+                            <textarea id="comentario-mejora">
+                                
+                            </textarea>
+                        </label>
+                        <button>Enviar mi respuesta</button>
+                    </div>
+                    <div class="lado-derecho">
+                        <img src="imagenes/cake.jpg" alt="pastel1">
+                        <img src="imagenes/vanilla-cake.jpg" alt="pastel2">
+                        <img src="imagenes/pastel3.jpg" alt="pastel3">
+                    </div>
+                </form>
             </section>
         </main>
     </div>
